--- a/pages/about.html
+++ b/pages/about.html
@@ -46,15 +46,15 @@
                     </div>
 
                     <div class="hidden md:flex space-x-10">
-                        <a href="/timestech"
+                        <a href="/"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
                         <a href="/pages/about.html"
                             class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
                             Us</a>
-                        <a href="/timestech/pages/services.html"
+                        <a href="/pages/services.html"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Our
                             Services</a>
-                        <a href="/timestech/pages/contact.html"
+                        <a href="/pages/contact.html"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Contact
                             Us</a>
                     </div>
@@ -73,13 +73,13 @@
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-                    <a href="/timestech"
+                    <a href="/"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium hover:bg-[#28abe3]">Home</a>
                     <a href="/pages/about.html"
                         class="text-black block active px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
-                    <a href="/timestech/pages/services.html"
+                    <a href="/pages/services.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
-                    <a href="/timestech/pages/contact.html"
+                    <a href="/pages/contact.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
                 </div>
             </div>
@@ -90,7 +90,7 @@
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
                 <h1 class="text-white text-3xl font-bold font-[Montserrat]">About Us</h1>
                 <h1 class="text-white font-[Montserrat] font-medium mt-4 opacity-80">
-                    <a href="/timestech">Home</a> <span class="font-extralight opacity-80">/</span> <a href="/pages/about.html">About Us</a>
+                    <a href="/">Home</a> <span class="font-extralight opacity-80">/</span> <a href="/pages/about.html">About Us</a>
                 </h1>
             </div>
         </div>
@@ -189,76 +189,15 @@
                         <p class="text-gray-700">With a presence in multiple markets, we offer truly global IT
                             solutions.</p>
                     </div>
+                    <div class="bg-white p-6 rounded-lg shadow-md">
+                        <i class="fas fa-globe text-4xl text-[#28abe3] mb-4"></i>
+                        <h3 class="text-xl font-semibold font-[Montserrat] mb-2">Happy Customers</h3>
+                        <p class="text-gray-700">Join the lot's of satisfied customers who have experienced our exceptional service and quality products. Your happiness is our priority!</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section id="contact" class="bg-gray-100 py-16">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[Montserrat]">Contact Us</h2>
-                <div class="w-20 h-1 bg-[#28abe3] mx-auto"></div>
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
-                        <form action="https://formspree.io/f/manywpeq" method="POST">
-                            <div class="mb-4">
-                                <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
-                                <input type="text" id="name" name="name"
-                                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                                    required aria-label="Your Name" placeholder="Enter your name">
-                            </div>
-                            <div class="mb-4">
-                                <label for="email" class="block text-gray-700 font-[Montserrat] mb-2">Email</label>
-                                <input type="email" id="email" name="email"
-                                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                                    required>
-                            </div>
-                            <div class="mb-4">
-                                <label for="message" class="block text-gray-700 font-[Montserrat] mb-2">Message</label>
-                                <textarea id="message" name="message" rows="4"
-                                    class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                                    required></textarea>
-                            </div>
-                            <button type="submit"
-                                class="bg-[#28abe3] text-white font-[Montserrat] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">Send
-                                Message</button>
-                        </form>
-                    </div>
-                    <div class="bg-white rounded-lg shadow-md p-6">
-                        <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Contact Information</h3>
-                        <ul class="space-y-4">
-                            <li class="flex items-center">
-                                <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
-                                    388530</span>
-                            </li>
-                            <li class="flex items-center">
-                                <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">+91 97259 39392</span>
-                            </li>
-                            <li class="flex items-center">
-                                <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">timestechsoftwares@gmai.com</span>
-                            </li>
-                        </ul>
-                        <div class="mt-6 flex justify-center flex-col items-center">
-                            <h4 class="text-lg font-semibold mb-2 font-[Montserrat]">Follow Us</h4>
-                            <div class="flex space-x-4">
-                                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
-                                        class="ri-facebook-fill text-2xl"></i></a>
-                                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
-                                        class="ri-twitter-fill text-2xl"></i></a>
-                                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
-                                        class="ri-linkedin-fill text-2xl"></i></a>
-                                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
-                                        class="ri-instagram-fill text-2xl"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
         <!-- Footer Section -->
         <footer class="bg-gray-800 text-white py-6">
             <div class="mx-auto px-4 sm:px-6 lg:px-8">
