--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta name="twitter:image" content="./public/IT_office.jpg">
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
     onload="this.rel='stylesheet'">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <noscript>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css">
   </noscript>
@@ -34,14 +35,13 @@
 </head>
 
 <body class="overflow-x-hidden">
-
   <!-- Preloader -->
   <div id="preloader" class="bg-white top-0 left-0 z-[30] w-screen h-screen flex justify-center items-center">
     <img src="./public/loader.gif" alt="">
   </div>
 
   <!-- Main Section -->
-  <main id="main" class="relative hidden">
+  <main id="main" class="relative hidden overflow-x-hidden font-[Montserrat]">
 
     <!-- Scrool to Top Button -->
     <button id="scrollToTopBtn"
@@ -54,20 +54,20 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <div class="flex-shrink-0">
-            <a href="/timestech" id="logo" class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
+            <a href="/" id="logo" class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
           </div>
 
           <div class="hidden md:flex space-x-10">
-            <a href="/timestech"
-              class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
+            <a href="/"
+              class="text-[#28abe3] uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Home</a>
             <a href="./pages/about.html"
-              class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
+              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">About
               Us</a>
             <a href="./pages/services.html"
-              class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Our
+              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Our
               Services</a>
             <a href="./pages/contact.html"
-              class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Contact
+              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Contact
               Us</a>
           </div>
 
@@ -83,15 +83,15 @@
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden">
-        <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-          <a href="/timestech"
-            class="text-black block px-3 py-2 uppercase rounded-md text-base active font-medium hover:bg-[#28abe3]">Home</a>
+        <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[Montserrat]">
+          <a href="/"
+            class="text-black block px-3 py-2 uppercase rounded-md text-base active font-semibold hover:bg-[red]">Home</a>
           <a href="./pages/about.html"
-            class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">About</a>
+            class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">About</a>
           <a href="./pages/services.html"
-            class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Services</a>
+            class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">Services</a>
           <a href="./pages/contact.html"
-            class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium hover:bg-[#28abe3]">Contact</a>
+            class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">Contact</a>
         </div>
       </div>
     </nav>
@@ -100,9 +100,11 @@
     <div class="background w-screen relative z-[1] h-[calc(100vh-80px)]">
       <div class="w-full h-full absolute bg-black opacity-[.8]">
         <div class="w-full h-full absolute flex flex-col justify-center items-center opacity-[1]">
-          <h1 class="text-white font-[Montserrat] font-black text-3xl text-center" id="header-text">Unlock Your Digital
+          <h1 class="text-white font-[Montserrat] font-black text-4xl lg:text-5xl text-center" id="header-text">Unlock
+            Your Digital
             Future</h1>
-          <p class="text-white text-center px-10 mt-4">Experience the cutting-edge technology solutions that propel your
+          <p class="text-white font-[Montserrat] text-lg text-center px-10 mt-4">Experience the cutting-edge technology
+            solutions that propel your
             business forward. Explore the limitless possibilities with Timestech Softwares.</p>
           <a href="./pages/about.html" class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full">Discover More</a>
         </div>
@@ -200,52 +202,40 @@
       <!-- Testimonials Using Swiper js -->
       <section class="bg-gray-100 py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-center items-center flex-col">
-          <h2 class="text-3xl font-extrabold text-gray-900 text-center mb-4 font-[Montserrat]">What Our Clients Say</h2>
+          <h2 class="text-3xl font-extrabold text-gray-900 text-center mb-4 font-[Montserrat]">What Our Clients Says
+          </h2>
           <p class="text-gray-600 text-center font-[Montserrat]">Hear from our satisfied customers about
             their experience with Timestech</p>
           <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
-
         </div>
       </section>
 
-      <swiper-container class="mySwiper p-5" style="width: 100%; height: 500px;" autoplay-delay="1000"
-        autoplay-disable-on-interaction="false">
-        <swiper-slide class="text-black w-full bg-[#28abe4] rounded-lg">
-          <div class="flex flex-col items-center justify-center h-full p-4">
-            <p class="text-white text-lg font-[Montserrat] font-medium italic mb-2 text-center px-5 mt-4">
-              "We are very happy with Timestech softwares for creating the website for our company - Futuristic Trade
-              DMCC. The design is sleek and professional, perfectly reflecting our brand. Navigation is very user
-              friendly, making it easy for everyone to access important information and resources."</p>
-            <h4 class="text-black text-3xl mt-5 font-bold font-[Montserrat]">Ritvik Bajaj</h4>
-            <p class="text-black text-sm font-[Montserrat]">Managing Director, Futuristic Trade DMCC</p>
+      <div class="swiper w-full select-none font-[Montserrat] bg-red-800">
+        <div class="swiper-wrapper w-full h-[30vh]">
+          <div class="swiper-slide w-full bg-[#28abe3] text-white  flex justify-center items-center px-5 py-24">
+            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">"We are very happy with Timestech Softwares for creating
+              the website for our company - Futuristic Trade DMCC. The design is sleek and professional, perfectly
+              reflecting our brand. Navigation is very user friendly, making it easy for everyone to access important
+              information and resources."</h4>
           </div>
-        </swiper-slide>
-
-
-        <swiper-slide class="text-black w-full bg-[#28abe4] rounded-lg">
-          <div class="flex flex-col items-center justify-center h-full p-4">
-            <p class="text-white text-lg font-[Montserrat] italic mb-2 text-center px-5 mt-4">
-              "I highly recommend this business.”
-              “Their customer service is second to none.”
-              “The product quality is consistently outstanding, exceeding my expectations every time.”
-              “I was completely impressed with their professionalism and customer service"</p>
-            <h4 class="text-black text-3xl font-bold font-[Montserrat]"></h4>
-            <p class="text-black text-sm font-[Montserrat]">Director, Camburg Engineering</p>
+          <div class="swiper-slide w-full bg-[#28abe3] text-white   flex justify-center items-center px-5 py-24">
+            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">"We are absolutely thrilled with our new website for
+              our gold trading company - TradeHouse Gold & General Trading LLC! The black and gold color scheme exudes
+              sophistication and elegance, perfectly capturing the essence of our brand. The layout is very user
+              friendly as well."</h4>
           </div>
-        </swiper-slide>
-
-        <swiper-slide class="text-black w-full bg-[#28abe4] rounded-lg">
-          <div class="flex flex-col items-center justify-center h-full p-4">
-            <p class="text-white text-lg font-[Montserrat] italic mb-2 text-center px-5 mt-4">
-              We are absolutely thrilled with our new website for our gold trading company - TradeHouse Gold & General
-              Trading LLC! The black and gold color scheme exudes sophistication and elegance, perfectly capturing the
-              essence of our brand. The layout is very user friendly as well.</p>
-            <h4 class="text-black text-3xl font-bold font-[Montserrat]">Ritvik</h4>
-            <p class="text-black text-sm font-[Montserrat]">Director, TradeHouse Gold</p>
+          <div
+            class="swiper-slide w-full bg-[#28abe3] text-white  flex flex-col justify-center items-center  px-5 py-24">
+            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">“I highly recommend this business.”
+              Their customer service is second to none.
+              The product quality is consistently outstanding, exceeding my expectations every time.
+              I was completely impressed with their professionalism and customer service"</h4>
           </div>
-        </swiper-slide>
 
-      </swiper-container>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+
 
     </section>
 
@@ -253,8 +243,9 @@
 
     <section id="contact" class="bg-gray-100 py-16">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[Montserrat]">Contact Us</h2>
-        <div class="w-20 h-1 bg-[#28abe3] mx-auto"></div>
+        <h2 class="text-3xl font-black text-center text-gray-900 mb-4 font-[Montserrat]">Contact Us</h2>
+        <p class="text-gray-600 text-center font-[Montserrat]">Let's make something together</p>
+        <div class="w-20 h-1 bg-[#28abe3] mx-auto mt-4"></div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
           <div class="bg-white rounded-lg shadow-md p-6">
             <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
@@ -326,14 +317,12 @@
 
   </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
-  <script src="main.js"></script>
-  <script>
-    window.addEventListener('load', () => {
-      document.getElementById('preloader').style.display = 'none';
-      document.getElementById('main').classList.remove('hidden');
-    })
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
+    integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script type="module" src="main.js"></script>
+
 </body>
 
 </html>
