--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,12 +40,12 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center h-20">
                     <div class="flex-shrink-0">
-                        <a href="/timestech" id="logo"
+                        <a href="/" id="logo"
                             class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
                     </div>
 
                     <div class="hidden md:flex space-x-10">
-                        <a href="/timestech"
+                        <a href="/"
                             class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
                         <a href="./about.html"
                             class=" text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
@@ -72,7 +72,7 @@
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-                    <a href="/timestech"
+                    <a href="/"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium">Home</a>
                     <a href="./about.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium">About</a>
