Some Changes in services !!

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,20 +41,20 @@
                 <div class="flex justify-between items-center h-20">
                     <div class="flex-shrink-0">
                         <a href="/" id="logo"
-                            class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
+                            class="logo text-black text-3xl font-black font-[DM]">Timestech</a>
                     </div>
 
                     <div class="hidden md:flex space-x-10">
                         <a href="/"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
+                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Home</a>
                         <a href="./about.html"
-                            class=" text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
+                            class=" text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">About
                             Us</a>
                         <a href="./services.html"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Our
+                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Our
                             Services</a>
                         <a href="../pages/contact.html"
-                            class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Contact
+                            class="text-[#28abe3] uppercase text-md font-normal font-[DM] hover:text-blue-300">Contact
                             Us</a>
                     </div>
 
@@ -87,8 +87,8 @@
         <div class="background w-screen relative z-[-1] bg-cover"
             style="background-color: black; height: 30vh !important;">
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
-                <h1 class="text-white text-3xl font-bold font-[Montserrat]">Contact Us</h1>
-                <h1 class="text-white font-[Montserrat] font-medium mt-4 opacity-80">
+                <h1 class="text-white text-3xl font-bold font-[DM]">Contact Us</h1>
+                <h1 class="text-white font-[DM] font-medium mt-4 opacity-80">
                     <a href="/timestech">Home</a> <span class="font-extralight opacity-80">/</span> <a href="">Contact Us</a>
                 </h1>
             </div>
@@ -97,53 +97,53 @@
 
         <section id="contact" class="bg-gray-100 py-16">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[Montserrat]">Contact Us</h2>
+                <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[DM]">Contact Us</h2>
                 <div class="w-20 h-1 bg-[#28abe3] mx-auto"></div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
                     <div class="bg-white rounded-lg shadow-md p-6">
-                        <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
+                        <h3 class="text-xl font-semibold mb-4 font-[DM]">Get in Touch</h3>
                         <form action="https://formspree.io/f/manywpeq" method="POST">
                             <div class="mb-4">
-                                <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
+                                <label for="name" class="block text-gray-700 font-[DM] mb-2">Name</label>
                                 <input type="text" id="name" name="name"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                                     required>
                             </div>
                             <div class="mb-4">
-                                <label for="email" class="block text-gray-700 font-[Montserrat] mb-2">Email</label>
+                                <label for="email" class="block text-gray-700 font-[DM] mb-2">Email</label>
                                 <input type="email" id="email" name="email"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                                     required>
                             </div>
                             <div class="mb-4">
-                                <label for="message" class="block text-gray-700 font-[Montserrat] mb-2">Message</label>
+                                <label for="message" class="block text-gray-700 font-[DM] mb-2">Message</label>
                                 <textarea id="message" name="message" rows="4"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                                     required></textarea>
                             </div>
                             <button type="submit"
-                                class="bg-[#28abe3] text-white font-[Montserrat] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">Send
+                                class="bg-[#28abe3] text-white font-[DM] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">Send
                                 Message</button>
                         </form>
                     </div>
                     <div class="bg-white rounded-lg shadow-md p-6">
-                        <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Contact Information</h3>
+                        <h3 class="text-xl font-semibold mb-4 font-[DM]">Contact Information</h3>
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
+                                <span class="font-[DM]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">+91 97259 39392</span>
+                                <span class="font-[DM]">+91 97259 39392</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[Montserrat]">timestechsoftwares@gmai.com</span>
+                                <span class="font-[DM]">timestechsoftwares@gmai.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
-                            <h4 class="text-lg font-semibold mb-2 font-[Montserrat]">Follow Us</h4>
+                            <h4 class="text-lg font-semibold mb-2 font-[DM]">Follow Us</h4>
                             <div class="flex space-x-4">
                                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
                                         class="ri-facebook-fill text-2xl"></i></a>
