--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <!-- Main Section -->
-  <main id="main" class="relative hidden overflow-x-hidden font-[Montserrat]">
+  <main id="main" class="relative hidden overflow-x-hidden font-[DM]">
 
     <!-- Scrool to Top Button -->
     <button id="scrollToTopBtn"
@@ -50,24 +50,24 @@
     </button>
 
     <!-- Top Navigation Bar -->
-    <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
+    <nav class="w-screen z-[4] sticky h-28 left-0 top-0 bg-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-20">
           <div class="flex-shrink-0">
-            <a href="/" id="logo" class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
+            <a href="/" id="logo" class="logo text-black text-3xl font-black font-[DM]">Timestech</a>
           </div>
 
           <div class="hidden md:flex space-x-10">
             <a href="/"
-              class="text-[#28abe3] uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Home</a>
+              class="text-[#28abe3] uppercase text-lg font-light font-[DM] hover:text-blue-300">Home</a>
             <a href="./pages/about.html"
-              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">About
+              class="text-black uppercase text-lg font-light font-[DM] hover:text-blue-300">About
               Us</a>
             <a href="./pages/services.html"
-              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Our
+              class="text-black uppercase text-lg font-light font-[DM] hover:text-blue-300">Our
               Services</a>
             <a href="./pages/contact.html"
-              class="text-black uppercase text-md font-semibold font-[Montserrat] hover:text-blue-300">Contact
+              class="text-black uppercase text-lg font-light font-[DM] hover:text-blue-300">Contact
               Us</a>
           </div>
 
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div id="mobile-menu" class="hidden md:hidden">
-        <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[Montserrat]">
+        <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[DM]">
           <a href="/"
             class="text-black block px-3 py-2 uppercase rounded-md text-base active font-semibold hover:bg-[red]">Home</a>
           <a href="./pages/about.html"
@@ -100,10 +100,10 @@
     <div class="background w-screen relative z-[1] h-[calc(100vh-80px)]">
       <div class="w-full h-full absolute bg-black opacity-[.8]">
         <div class="w-full h-full absolute flex flex-col justify-center items-center opacity-[1]">
-          <h1 class="text-white font-[Montserrat] font-black text-4xl lg:text-5xl text-center" id="header-text">Unlock
+          <h1 class="text-white font-[DM] font-black text-7xl lg:text-5xl text-center" id="header-text">Unlock
             Your Digital
             Future</h1>
-          <p class="text-white font-[Montserrat] text-lg text-center px-10 mt-4">Experience the cutting-edge technology
+          <p class="text-white font-[DM] text-lg text-center px-10 mt-4">Experience the cutting-edge technology
             solutions that propel your
             business forward. Explore the limitless possibilities with Timestech Softwares.</p>
           <a href="./pages/about.html" class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full">Discover More</a>
@@ -116,7 +116,7 @@
 
       <!-- About Us - Heading -->
       <div class="flex flex-col items-center">
-        <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">We Are Timestech Softwares</h2>
+        <h2 class="text-3xl text-center font-bold font-[DM] text-black">We Are Timestech Softwares</h2>
         <p class="text-center mt-4">Welcome to Timestech Softwares, where innovation meets excellence.</p>
         <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
       </div>
@@ -134,7 +134,7 @@
       <!-- Key Services -->
       <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
         <div class="flex flex-col items-center">
-          <h2 class="text-3xl font-black font-[Montserrat] text-black">Our Services</h2>
+          <h2 class="text-3xl font-black font-[DM] text-black">Our Services</h2>
           <p class="text-center mt-4">Explore our comprehensive range of services, designed to propel your business
             forward with the latest technology advancements.</p>
           <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
@@ -147,7 +147,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">Web Development</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Web Development</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -156,7 +156,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">App Development</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">App Development</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -165,7 +165,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">Logo Design</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Logo Design</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -174,7 +174,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">Banner Design</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Banner Design</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -183,7 +183,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">IT Consultancy</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">IT Consultancy</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -191,7 +191,7 @@
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[Montserrat] text-center mt-4">Web Hosting</h3>
+            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Web Hosting</h3>
             <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
               quidem.</p>
           </div>
@@ -202,15 +202,15 @@
       <!-- Testimonials Using Swiper js -->
       <section class="bg-gray-100 py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-center items-center flex-col">
-          <h2 class="text-3xl font-extrabold text-gray-900 text-center mb-4 font-[Montserrat]">What Our Clients Says
+          <h2 class="text-3xl font-extrabold text-gray-900 text-center mb-4 font-[DM]">What Our Clients Says
           </h2>
-          <p class="text-gray-600 text-center font-[Montserrat]">Hear from our satisfied customers about
+          <p class="text-gray-600 text-center font-[DM]">Hear from our satisfied customers about
             their experience with Timestech</p>
           <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
         </div>
       </section>
 
-      <div class="swiper w-full select-none font-[Montserrat] bg-red-800">
+      <div class="swiper w-full select-none font-[DM] bg-red-800">
         <div class="swiper-wrapper w-full h-[30vh]">
           <div class="swiper-slide w-full bg-[#28abe3] text-white  flex justify-center items-center px-5 py-24">
             <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">"We are very happy with Timestech Softwares for creating
@@ -243,54 +243,54 @@
 
     <section id="contact" class="bg-gray-100 py-16">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl font-black text-center text-gray-900 mb-4 font-[Montserrat]">Contact Us</h2>
-        <p class="text-gray-600 text-center font-[Montserrat]">Let's make something together</p>
+        <h2 class="text-3xl font-black text-center text-gray-900 mb-4 font-[DM]">Contact Us</h2>
+        <p class="text-gray-600 text-center font-[DM]">Let's make something together</p>
         <div class="w-20 h-1 bg-[#28abe3] mx-auto mt-4"></div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
           <div class="bg-white rounded-lg shadow-md p-6">
-            <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Get in Touch</h3>
+            <h3 class="text-xl font-semibold mb-4 font-[DM]">Get in Touch</h3>
             <form action="https://formspree.io/f/manywpeq" method="POST">
               <div class="mb-4">
-                <label for="name" class="block text-gray-700 font-[Montserrat] mb-2">Name</label>
+                <label for="name" class="block text-gray-700 font-[DM] mb-2">Name</label>
                 <input type="text" id="name" name="name"
                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                   required>
               </div>
               <div class="mb-4">
-                <label for="email" class="block text-gray-700 font-[Montserrat] mb-2">Email</label>
+                <label for="email" class="block text-gray-700 font-[DM] mb-2">Email</label>
                 <input type="email" id="email" name="email"
                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                   required>
               </div>
               <div class="mb-4">
-                <label for="message" class="block text-gray-700 font-[Montserrat] mb-2">Message</label>
+                <label for="message" class="block text-gray-700 font-[DM] mb-2">Message</label>
                 <textarea id="message" name="message" rows="4"
                   class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
                   required></textarea>
               </div>
               <button type="submit"
-                class="bg-[#28abe3] text-white font-[Montserrat] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">Send
+                class="bg-[#28abe3] text-white font-[DM] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">Send
                 Message</button>
             </form>
           </div>
           <div class="bg-white rounded-lg shadow-md p-6">
-            <h3 class="text-xl font-semibold mb-4 font-[Montserrat]">Contact Information</h3>
+            <h3 class="text-xl font-semibold mb-4 font-[DM]">Contact Information</h3>
             <ul class="space-y-4">
               <li class="flex items-center cursor-pointer hover:bg-gray-100 transition duration-300 ease-in-out">
                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[Montserrat]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
+                <span class="font-[DM]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
               </li>
               <li class="flex items-center">
                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[Montserrat]">+91 97259 39392</span>
+                <span class="font-[DM]">+91 97259 39392</span>
               </li>
               <li class="flex items-center">
                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[Montserrat]">timestechsoftwares@gmai.com</span>
+                <span class="font-[DM]">timestechsoftwares@gmai.com</span>
               </li>
             </ul>
             <div class="mt-6 flex justify-center flex-col items-center">
-              <h4 class="text-lg font-semibold mb-2 font-[Montserrat]">Follow Us</h4>
+              <h4 class="text-lg font-semibold mb-2 font-[DM]">Follow Us</h4>
               <div class="flex space-x-4">
                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-facebook-fill text-2xl"></i></a>
                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-twitter-fill text-2xl"></i></a>
