--- a/pages/about.html
+++ b/pages/about.html
@@ -42,20 +42,20 @@
                 <div class="flex justify-between items-center h-20">
                     <div class="flex-shrink-0">
                         <a href="/timestech" id="logo"
-                            class="logo text-black text-3xl font-black font-[Montserrat]">Timestech</a>
+                            class="logo text-black text-3xl font-black font-[DM]">Timestech</a>
                     </div>
 
                     <div class="hidden md:flex space-x-10">
                         <a href="/"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Home</a>
+                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Home</a>
                         <a href="/pages/about.html"
-                            class="text-[#28abe3] uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">About
+                            class="text-[#28abe3] uppercase text-md font-normal font-[DM] hover:text-blue-300">About
                             Us</a>
                         <a href="/pages/services.html"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Our
+                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Our
                             Services</a>
                         <a href="/pages/contact.html"
-                            class="text-black uppercase text-md font-normal font-[Montserrat] hover:text-blue-300">Contact
+                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Contact
                             Us</a>
                     </div>
 
@@ -88,8 +88,8 @@
         <div class="background w-screen relative z-[-1] bg-cover"
             style="background-color: black; height: 30vh !important;">
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
-                <h1 class="text-white text-3xl font-bold font-[Montserrat]">About Us</h1>
-                <h1 class="text-white font-[Montserrat] font-medium mt-4 opacity-80">
+                <h1 class="text-white text-3xl font-bold font-[DM]">About Us</h1>
+                <h1 class="text-white font-[DM] font-medium mt-4 opacity-80">
                     <a href="/">Home</a> <span class="font-extralight opacity-80">/</span> <a href="/pages/about.html">About Us</a>
                 </h1>
             </div>
@@ -97,13 +97,13 @@
 
         <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
             <div class="flex flex-col items-center mb-12">
-                <h2 class="text-3xl text-center font-bold font-[Montserrat] text-black">About Timestech Softwares</h2>
+                <h2 class="text-3xl text-center font-bold font-[DM] text-black">About Timestech Softwares</h2>
                 <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-[10vw]">
                 <div class="flex flex-col justify-center">
-                    <h3 class="text-2xl font-semibold font-[Montserrat] mb-4">Innovating for Tomorrow</h3>
+                    <h3 class="text-2xl font-semibold font-[DM] mb-4">Innovating for Tomorrow</h3>
                     <p class="text-gray-700 text-justify mt-5">
                         At Timestech Softwares, we are passionate about leveraging technology to solve complex business
                         challenges. With a team of skilled professionals and years of industry experience, we deliver
@@ -130,7 +130,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
                     <!-- Our Mission -->
                     <div class="bg-gray-50 p-8 rounded-lg shadow-md">
-                        <h3 class="text-2xl font-bold font-[Montserrat] text-black mb-4">Our Mission</h3>
+                        <h3 class="text-2xl font-bold font-[DM] text-black mb-4">Our Mission</h3>
                         <div class="w-16 h-1 bg-[#28abe3] mb-6"></div>
                         <p class="text-gray-700 mb-4">
                             At Timestech Softwares, our mission is to empower businesses through innovative technology
@@ -146,7 +146,7 @@
 
                     <!-- Our Vision -->
                     <div class="bg-gray-50 p-8 rounded-lg shadow-md">
-                        <h3 class="text-2xl font-bold font-[Montserrat] text-black mb-4">Our Vision</h3>
+                        <h3 class="text-2xl font-bold font-[DM] text-black mb-4">Our Vision</h3>
                         <div class="w-16 h-1 bg-[#28abe3] mb-6"></div>
                         <p class="text-gray-700 mb-4">
                             Our vision is to be a global leader in IT solutions, recognized for our innovation,
@@ -166,32 +166,32 @@
         <section class="bg-gray-100 py-20">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl font-bold font-[Montserrat] text-black">Why Choose Us</h2>
+                    <h2 class="text-3xl font-bold font-[DM] text-black">Why Choose Us</h2>
                     <div class="w-20 h-1 bg-[#28abe3] mt-4 mx-auto"></div>
                 </div>
 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <i class="fas fa-lightbulb text-4xl text-[#28abe3] mb-4"></i>
-                        <h3 class="text-xl font-semibold font-[Montserrat] mb-2">Innovative Solutions</h3>
+                        <h3 class="text-xl font-semibold font-[DM] mb-2">Innovative Solutions</h3>
                         <p class="text-gray-700">We stay ahead of the curve, bringing you the latest in technology and
                             methodologies.</p>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <i class="fas fa-users text-4xl text-[#28abe3] mb-4"></i>
-                        <h3 class="text-xl font-semibold font-[Montserrat] mb-2">Expert Team</h3>
+                        <h3 class="text-xl font-semibold font-[DM] mb-2">Expert Team</h3>
                         <p class="text-gray-700">Our diverse team of experts ensures top-notch solutions for every
                             project.</p>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <i class="fas fa-globe text-4xl text-[#28abe3] mb-4"></i>
-                        <h3 class="text-xl font-semibold font-[Montserrat] mb-2">Global Reach</h3>
+                        <h3 class="text-xl font-semibold font-[DM] mb-2">Global Reach</h3>
                         <p class="text-gray-700">With a presence in multiple markets, we offer truly global IT
                             solutions.</p>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <i class="fas fa-globe text-4xl text-[#28abe3] mb-4"></i>
-                        <h3 class="text-xl font-semibold font-[Montserrat] mb-2">Happy Customers</h3>
+                        <h3 class="text-xl font-semibold font-[DM] mb-2">Happy Customers</h3>
                         <p class="text-gray-700">Join the lot's of satisfied customers who have experienced our exceptional service and quality products. Your happiness is our priority!</p>
                     </div>
                 </div>
