--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,53 +36,52 @@
             <i class="ri ri-arrow-up-line"></i>
         </button>
 
-        <nav class="w-screen z-[1] sticky h-20 left-0 top-0 bg-white">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="flex justify-between items-center h-20">
-                    <div class="flex-shrink-0">
-                        <a href="/" id="logo"
-                            class="logo text-black text-3xl font-black font-[DM]">Timestech</a>
-                    </div>
-
-                    <div class="hidden md:flex space-x-10">
-                        <a href="/"
-                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Home</a>
-                        <a href="./about.html"
-                            class=" text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">About
-                            Us</a>
-                        <a href="./services.html"
-                            class="text-black uppercase text-md font-normal font-[DM] hover:text-blue-300">Our
-                            Services</a>
-                        <a href="../pages/contact.html"
-                            class="text-[#28abe3] uppercase text-md font-normal font-[DM] hover:text-blue-300">Contact
-                            Us</a>
-                    </div>
-
-                    <div class="flex md:hidden">
-                        <button id="menu-button"
-                            class="inline-flex items-center justify-center p-2 rounded-md text-black hover:bg-[#28abe3] focus:outline-none">
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16m-7 6h7" />
-                            </svg>
-                        </button>
-                    </div>
+        <!-- Top Navigation Bar -->
+        <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
+              <div class="flex justify-between items-center h-full">
+                <div class="flex-shrink-0">
+                  <a href="/" id="logo" class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">Timestech</a>
                 </div>
+      
+                <div class="hidden md:flex space-x-10">
+                  <a href="/"
+                    class="text-[#28abe3] uppercase text-lg font-light font-[DM] hover:text-blue-300">Home</a>
+                  <a href="./about.html"
+                    class="text-black uppercase text-lg font-light font-[DM] hover:text-blue-300">About
+                    Us</a>
+                  <a href="./services.html"
+                    class="text-black uppercase text-lg font-light font-[DM] hover:text-blue-300">Our
+                    Services</a>
+                  <a href="./contact.html"
+                    class="text-[#28abe3] uppercase text-lg font-light font-[DM] hover:text-blue-300">Contact
+                    Us</a>
+                </div>
+      
+                <div class="flex md:hidden">
+                  <button id="menu-button"
+                    class="inline-flex items-center justify-center p-2 rounded-md text-black hover:bg-[#28abe3] focus:outline-none">
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                      stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+                    </svg>
+                  </button>
+                </div>
+              </div>
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
-                <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white">
-                    <a href="/"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base  font-medium">Home</a>
-                    <a href="./about.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium">About</a>
-                    <a href="./services.html"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base font-medium">Services</a>
-                    <a href="../pages/contact.html" 
-                        class="text-[#28abe3] block active px-3 py-2 uppercase rounded-md text-base font-medium">Contact</a>
-                </div>
+              <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[DM]">
+                <a href="/"
+                  class="text-black block px-3 py-2 uppercase rounded-md text-base active font-semibold hover:bg-[#28abe3]">Home</a>
+                <a href="./about.html"
+                  class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">About</a>
+                <a href="./services.html"
+                  class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">Services</a>
+                <a href="./contact.html"
+                  class="text-[#28abe3] block px-3 py-2 uppercase rounded-md text-base font-semibold hover:text-white hover:bg-[#28abe3]">Contact</a>
+              </div>
             </div>
-        </nav>
+          </nav>
 
         <div class="background w-screen relative z-[-1] bg-cover"
             style="background-color: black; height: 30vh !important;">
