--- a/pages/services.html
+++ b/pages/services.html
@@ -100,7 +100,7 @@
             </div>
         </div>
 
-        <section class="services-section py-20">
+        <section class="services-section py-20 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex flex-col items-center mb-12">
                     <h2 class="text-3xl text-center font-bold font-[DM] text-black">Explore Our Services</h2>
@@ -114,7 +114,7 @@
 
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 justify-items-center">
                     <div
-                        class="service-item flex items-center justify-center flex-col rounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
+                        class="service-item flex bg-white items-center justify-center flex-col rounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
                         <img src="../public/laptop.gif" class="w-20" alt="">
                         <h3 class="text-xl font-semibold mb-2 font-[DM]">Software Development</h3>
                         <p class="text-gray-700 font-medium text-center">We design and develop custom software solutions
@@ -122,7 +122,7 @@
                             business needs.</p>
                     </div>
                     <div
-                        class="service-item flex items-center justify-center flex-col rounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
+                        class="service-item flex items-center justify-center bg-white  flex-col rounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
 
                         <img src="../public/cloud-network.gif" class="w-20" alt="">
                         <h3 class="text-xl font-semibold mb-2 font-[DM]">Cloud Services</h3>
@@ -132,7 +132,7 @@
                     </div>
 
                     <div
-                        class="service-item flex items-center justify-center flex-col flex-colrounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
+                        class="service-item flex items-center justify-center bg-white  flex-col flex-colrounded-lg border-2 border-gray-200 shadow-sm shadow-gray-300 px-3 py-5">
                         <img src="../public/cyber-security.gif" class="w-20" alt="">
                         <h3 class="text-xl font-semibold mb-2 font-[DM]">IT Consulting</h3>
                         <p class="text-gray-700 text-center font-medium">Get expert advice on IT strategy,
