--- a/pages/contact.html
+++ b/pages/contact.html
@@ -138,7 +138,7 @@
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM]">timestechsoftwares@gmai.com</span>
+                                <span class="font-[DM]">timestechsoftwares@gmail.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
