--- a/pages/services.html
+++ b/pages/services.html
@@ -43,9 +43,13 @@
             <!-- Top Navigation Bar -->
             <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
-                  <div class="flex justify-between items-center h-full">
-                    <div class="flex-shrink-0">
-                      <a href="/" id="logo" class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">Timestech</a>
+                  <div class="flex justify-between  items-center h-full">
+                    <div class="w-20">
+
+                      <a href="/" id="logo" class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">
+                        <img src="../public/logo.png" alt="" class="w-24"/>
+                      </a>
+
                     </div>
           
                     <div class="hidden md:flex space-x-10">
@@ -71,6 +75,7 @@
                         </svg>
                       </button>
                     </div>
+
                   </div>
                 </div>
                 <div id="mobile-menu" class="hidden md:hidden">
@@ -403,7 +408,7 @@
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM]">timestechsoftwares@gmai.com</span>
+                                <span class="font-[DM]">timestechsoftwares@gmail.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
