--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
         <div class="flex justify-between items-center h-full">
           <div class="w-[50%] h-full flex justify-start items-center">
-            <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
+            <img src="./public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
           </div>
 
 
