--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
       <!-- About Us - Heading -->
       <div class="flex flex-col items-center">
         <h2 class="text-3xl text-center font-bold font-[DM] text-black">We Are Timestech Softwares</h2>
-        <p class="text-center mt-4">Welcome to Timestech Softwares, where innovation meets excellence.</p>
-        <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
+        <p class="text-center font-light mt-3 opacity-75 tracking-wide text-xl">Welcome to Timestech Softwares, where innovation meets excellence.</p>
+        <div class="w-20 h-1 bg-[#28abe3] mt-3"></div>
       </div>
 
       <!-- Defined Timestech -->
       <div class="w-full mt-10">
         <img src="./public/IT_team.jpg" alt="office Image">
-        <p class="w-full text-center text-md lg:text-2xl lg:mt-5 font-medium mt-4">"At Timestech Softwares, we
+        <p class="w-full text-center text-md italic font-light lg:text-2xl lg:mt-5 opacity-75 mt-4">"At Timestech Softwares, we
           specialize in delivering a
           diversified portfolio
           of IT solutions, including Software Development, Cloud Services, Cybersecurity, and IT Consulting. Our
