--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,7 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
                 <div class="flex justify-between items-center h-full">
                     <div class="w-[50%] h-full flex justify-start items-center">
-                        <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
+                        <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain">
                     </div>
 
 
@@ -90,7 +90,7 @@
         <div class="background w-screen relative z-[-1] bg-cover"
             style="background-color: black; height: 30vh !important;">
             <div class="w-full h-full absolute bg-black opacity-80 flex flex-col items-center justify-center">
-                <h1 class="text-white text-3xl font-bold font-[DM]">Contact Us</h1>
+                <h1 class="text-white text-4xl font-bold font-[DM]">Contact Us</h1>
                 <h1 class="text-white font-[DM] font-medium mt-4 opacity-80">
                     <a href="/timestech">Home</a> <span class="font-extralight opacity-80">/</span> <a href="">Contact
                         Us</a>
@@ -101,7 +101,7 @@
 
         <section id="contact" class="bg-gray-100 py-16">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-8 font-[DM]">Contact Us</h2>
+                <h2 class="text-4xl font-bold text-center text-gray-900 mb-5 font-[DM]">Contact Us</h2>
                 <div class="w-20 h-1 bg-[#28abe3] mx-auto"></div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
                     <div class="bg-white rounded-lg shadow-md p-6">
@@ -135,20 +135,20 @@
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
+                                <span class="font-[DM] text-lg">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
                                     388530</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM]">+91 97259 39392</span>
+                                <span class="font-[DM] text-lg">+91 97259 39392</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM]">timestechsoftwares@gmail.com</span>
+                                <span class="font-[DM] text-lg">timestechsoftwares@gmail.com</span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
-                            <h4 class="text-lg font-semibold mb-2 font-[DM]">Follow Us</h4>
+                            <h4 class="text-lg font-semibold mb-2 mt-4 font-[DM]">Follow Us</h4>
                             <div class="flex space-x-4">
                                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i
                                         class="ri-facebook-fill text-2xl"></i></a>
