--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
         <div class="flex justify-between items-center h-full">
           <div class="w-[50%] h-full flex justify-start items-center">
-            <img src="./public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
+            <img src="./public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain">
           </div>
 
 
@@ -101,11 +101,13 @@
       <div class="w-full h-full absolute bg-black opacity-[.8]">
         <div class="w-full h-full absolute flex flex-col justify-center items-center opacity-[1]">
           <h1
-            class="text-white font-[DM] font-black text-3xl w-[87%] lg:text-5xl xl:text-4xl md:text-3xl sm:text-2xl text-center"
+            class="text-white font-[DM] font-black text-5xl w-[87%] lg:text-5xl xl:text-4xl md:text-3xl sm:text-2xl text-center"
             id="header-text">Unlock
             Your Digital
             Future</h1>
-          <p class="text-white font-[DM] text-lg text-center px-10 mt-4">Experience the cutting-edge technology
+
+          <p class="text-white font-[DM] text-lg lg:text-2xl lg:w-[60%] opacity-60  text-center px-10 mt-4">Experience the
+            cutting-edge technology
             solutions that propel your
             business forward. Explore the limitless possibilities with Timestech Softwares.</p>
           <a href="./pages/about.html" class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full">Discover More</a>
@@ -118,15 +120,17 @@
 
       <!-- About Us - Heading -->
       <div class="flex flex-col items-center">
-        <h2 class="text-3xl text-center font-bold font-[DM] text-black">We Are Timestech Softwares</h2>
-        <p class="text-center font-light mt-3 opacity-75 tracking-wide text-xl">Welcome to Timestech Softwares, where innovation meets excellence.</p>
+        <h2 class="lg:text-3xl text-2xl text-center font-bold font-[DM] text-black">We Are Timestech Softwares</h2>
+        <p class="text-center font-light mt-3 opacity-75 tracking-wide text-lg lg:text-xl">Welcome to Timestech Softwares, where
+          innovation meets excellence.</p>
         <div class="w-20 h-1 bg-[#28abe3] mt-3"></div>
       </div>
 
       <!-- Defined Timestech -->
       <div class="w-full mt-10">
         <img src="./public/IT_team.jpg" alt="office Image">
-        <p class="w-full text-center text-md italic font-light lg:text-2xl lg:mt-5 opacity-75 mt-4">"At Timestech Softwares, we
+        <p class="w-full text-center text-md italic font-light lg:text-2xl lg:mt-5 opacity-75 mt-4">"At Timestech
+          Softwares, we
           specialize in delivering a
           diversified portfolio
           of IT solutions, including Software Development, Cloud Services, Cybersecurity, and IT Consulting. Our
@@ -135,78 +139,89 @@
 
       <!-- Key Services -->
       <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
+        <!-- Services - Heading -->
         <div class="flex flex-col items-center">
-          <h2 class="text-3xl font-black font-[DM] text-black">Our Services</h2>
-          <p class="text-center mt-4">Explore our comprehensive range of services, designed to propel your business
+          <h2 class="text-3xl lg:text-4xl font-black font-[DM] text-black">Our Services</h2>
+          <p class="text-center font-light mt-3 opacity-75 tracking-wide text-md lg:text-xl">Explore our comprehensive range of
+            services, designed to propel your business
             forward with the latest technology advancements.</p>
           <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
         </div>
-
-
+        <!-- Services - Description -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-10 mt-10">
 
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Web Development</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black  font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">Web Development</h3>
+            <p class="text-black font-medium opacity-80 text-center mt-4 text-md lg:text-lg">Transform your business with our
+              cutting-edge web development solutions, offering unparalleled performance, scalability, and user
+              experience.</p>
           </div>
 
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">App Development</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">App Development</h3>
+            <p class="text-black opacity-80 font-medium text-center mt-4 text-md lg:text-lg">From conceptualization to deployment,
+              our app development services provide a seamless experience with cutting-edge technology, innovative
+              design, and unparalleled performance.</p>
           </div>
 
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Logo Design</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black  font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">Logo Design</h3>
+            <p class="text-black text-center font-medium mt-4  opacity-80 text-md lg:text-lg">Create a lasting impression with our
+              custom logo design services. From concept to completion, our expert designers will craft a unique visual
+              identity that accurately represents your brand values and resonates with your target audience.</p>
           </div>
 
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Banner Design</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black  font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">Banner Design</h3>
+            <p class="text-black font-medium opacity-80 mb-4 text-center mt-4 text-md lg:text-lg">Elevate your brand's visibility and impact with
+              our expert banner design services. From conceptualization to delivery, our designers craft stunning
+              visuals that captivate audiences, drive engagement, and leave a lasting impression.</p>
           </div>
 
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">IT Consultancy</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black  font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">IT Consultancy</h3>
+            <p class="text-black font-medium mb-4 opacity-80 text-center mt-4 text-md lg:text-lg">Empower your business with our expert IT
+              consultancy services, designed to optimize your technology infrastructure, streamline operations, and
+              drive growth through strategic guidance and innovative solutions.</p>
           </div>
+
           <div class="bg-[#28abe3] p-5 rounded-lg">
             <div class="flex justify-center items-center">
               <i class="fas fa-laptop-code text-white text-4xl"></i>
             </div>
-            <h3 class="text-white text-xl font-black font-[DM] text-center mt-4">Web Hosting</h3>
-            <p class="text-white text-center mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-              quidem.</p>
+            <h3 class="text-black  font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">Web Hosting</h3>
+            <p class="text-black font-medium opacity-80 mb-4 text-center mt-4 text-md lg:text-lg">Experience lightning-fast load times, reliable uptime, and
+              unparalleled security with our premium web hosting services, designed to take your online presence to the
+              next level.</p>
           </div>
+
         </div>
+
+
       </section>
 
 
       <!-- Testimonials Using Swiper js -->
       <section class="bg-gray-100 py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-center items-center flex-col">
-          <h2 class="text-3xl font-extrabold text-gray-900 text-center mb-4 font-[DM]">What Our Clients Says
+          <h2 class="text-3xl lg:text-4xl font-extrabold text-gray-900 text-center mb-4 font-[DM]">What Our Clients Says
           </h2>
-          <p class="text-gray-600 text-center font-[DM]">Hear from our satisfied customers about
+          <p class="text-gray-600 text-center lg:text-2xl opacity-75 font-[DM] text-lg">Hear from our satisfied customers about
             their experience with Timestech</p>
           <div class="w-20 h-1 bg-[#28abe3] mt-4"></div>
         </div>
@@ -215,44 +230,51 @@
       <div class="swiper w-full select-none font-[DM] py-12 bg-[#28abe3]">
         <div class="swiper-wrapper w-full h-[30vh] py-12">
 
-          <div
-            class="swiper-slide w-full  text-white  flex justify-center flex-col items-center px-5 py-24">
-            <h4 class="font-light lg:text-xl text-center lg:w-[70%]">"We are very happy with Timestech Softwares for
+          <div class="swiper-slide w-full  text-white  flex justify-center flex-col items-center px-5 py-24">
+            <i class="ri-chat-4-fill text-black text-5xl"></i>
+            <h4 class="font-medium lg:text-2xl mt-10 text-black text-center lg:w-[70%]">We are very happy with Timestech
+              Softwares for
               creating
               the website for our company - Futuristic Trade DMCC. The design is sleek and professional, perfectly
               reflecting our brand. Navigation is very user friendly, making it easy for everyone to access important
-              information and resources."</h4>
+              information and resources.</h4>
 
             <div class="w-full flex justify-center items-center py-4">
               <a href="https://www.futuristictradedmcc.com/"
-                class="bg-white text-[#28abe3] px-4 py-2 mt-10 rounded-full">Visit Site <i
+                class="bg-black text-[#28abe3] px-4 py-2 mt-10 rounded-full">Visit Site <i
                   class="ri-arrow-right-up-line"></i></a>
             </div>
+
           </div>
 
-          <div class="swiper-slide w-full bg-[#28abe3] text-white flex-col   flex justify-center items-center px-5 py-24">
-            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">"We are absolutely thrilled with our new website for
+          <div
+            class="swiper-slide w-full bg-[#28abe3] text-white flex-col   flex justify-center items-center px-5 py-24">
+            <i class="ri-chat-4-fill text-black text-5xl"></i>
+            <h4 class="font-medium text-black mt-10 lg:text-2xl text-center lg:w-[70%]">We are absolutely thrilled with
+              our new website for
               our gold trading company - TradeHouse Gold & General Trading LLC! The black and gold color scheme exudes
               sophistication and elegance, perfectly capturing the essence of our brand. The layout is very user
-              friendly as well."</h4>
+              friendly as well.</h4>
 
             <div class="w-full flex justify-center items-center py-4">
               <a href="https://www.tradehousegold.com/"
-                class="bg-white text-[#28abe3] px-4 py-2 rounded-full">Visit Site <i
+                class="bg-black text-[#28abe3] px-4 mt-10 py-2 rounded-full">Visit Site <i
                   class="ri-arrow-right-up-line"></i></a>
             </div>
           </div>
 
           <div
             class="swiper-slide w-full bg-[#28abe3] text-white  flex flex-col justify-center items-center  px-5 py-24">
-            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">“I highly recommend this business.”
+            <i class="ri-chat-4-fill text-black text-5xl"></i>
+            <h4 class="font-medium text-black lg:text-2xl mt-10 text-center lg:w-[70%]">I highly recommend this
+              business.
               Their customer service is second to none.
               The product quality is consistently outstanding, exceeding my expectations every time.
-              I was completely impressed with their professionalism and customer service"</h4>
+              I was completely impressed with their professionalism and customer service</h4>
 
             <div class="w-full flex justify-center items-center py-4">
               <a href="https://camburg-engineering.com/"
-                class="bg-white text-[#28abe3] px-4 py-2 rounded-full">Visit Site <i
+                class="bg-black text-[#28abe3] px-4 mt-10 py-2 rounded-full">Visit Site <i
                   class="ri-arrow-right-up-line"></i></a>
             </div>
           </div>
@@ -268,8 +290,8 @@
 
     <section id="contact" class="bg-gray-100 py-16">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-3xl font-black text-center text-gray-900 mb-4 font-[DM]">Contact Us</h2>
-        <p class="text-gray-600 text-center font-[DM]">Let's make something together</p>
+        <h2 class="text-4xl font-black text-center text-gray-900 mb-4 font-[DM]">Contact Us</h2>
+        <p class="text-gray-600 text-center font-[DM] text-2xl opacity-75">Let's make something together</p>
         <div class="w-20 h-1 bg-[#28abe3] mx-auto mt-4"></div>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
           <div class="bg-white rounded-lg shadow-md p-6">
@@ -303,19 +325,19 @@
             <ul class="space-y-4">
               <li class="flex items-center cursor-pointer hover:bg-gray-100 transition duration-300 ease-in-out">
                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM]">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
+                <span class="font-[DM] text-lg">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat 388530</span>
               </li>
               <li class="flex items-center">
                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM]">+91 97259 39392</span>
+                <span class="font-[DM] text-lg">+91 97259 39392</span>
               </li>
               <li class="flex items-center">
                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM]">timestechsoftwares@gmail.com</span>
+                <span class="font-[DM] text-lg">timestechsoftwares@gmail.com</span>
               </li>
             </ul>
             <div class="mt-6 flex justify-center flex-col items-center">
-              <h4 class="text-lg font-semibold mb-2 font-[DM]">Follow Us</h4>
+              <h4 class="text-lg font-semibold mb-2 mt-4 font-[DM]">Follow Us</h4>
               <div class="flex space-x-4">
                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-facebook-fill text-2xl"></i></a>
                 <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-twitter-fill text-2xl"></i></a>
