--- a/pages/services.html
+++ b/pages/services.html
@@ -595,13 +595,13 @@
                 <li class="flex items-center">
                   <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
                   <span class="font-[DM] text-lg"
-                    >10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
+                    >Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
                     388530</span
                   >
                 </li>
                 <li class="flex items-center">
                   <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                  <span class="font-[DM] text-lg">+91 97259 39392</span>
+                  <span class="font-[DM] text-lg">+91 70411 93995</span>
                 </li>
                 <li class="flex items-center">
                   <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
