--- a/index.html
+++ b/index.html
@@ -384,10 +384,10 @@
                 class="w-full flex flex-col justify-center items-center py-4"
               >
                 <h1 class="mt-5 text-3xl font-bold text-center">
-                  Ritvik Bajaj
+                  Mohammed Abdul Salam
                 </h1>
-                <h1 class="text-md text-center">
-                  Managing Director - Futuristic Trade DMCC
+                <h1 class="text-lg text-center">
+                  Operations Manager - Futuristic Trade DMCC
                 </h1>
                 <a
                   href="https://www.futuristictradedmcc.com/"
@@ -415,10 +415,10 @@
                 class="w-full flex flex-col justify-center items-center py-4"
               >
                 <h1 class="mt-5 text-3xl font-bold text-center">
-                  Ritvik Bajaj
+                  Nirav Bhatt
                 </h1>
-                <h1 class="text-md text-center">
-                  Managing Director - TradeHouse Gold & General Trading LLC
+                <h1 class="text-lg text-center">
+                  Head of Operations - TradeHouse Gold & General Trading LLC
                 </h1>
                 <a
                   href="https://www.tradehousegold.com/"
@@ -445,10 +445,10 @@
                 class="w-full flex flex-col justify-center items-center py-4"
               >
                 <h1 class="mt-5 text-3xl font-bold text-center">
-                  Ritvik Bajaj
+                  Harsh Jadhav
                 </h1>
-                <h1 class="text-md text-center">
-                  Managing Director - Futuristic Trade DMCC
+                <h1 class="text-lg text-center">
+                  Director - Camburg Engineering
                 </h1>
                 <a
                   href="https://camburg-engineering.com/"
